Header no longer collapses on mobile when no site name provided
Fixes #53

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -887,6 +887,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     background: #FFFFFF;
+    min-height: 63px;
   }
 }
 
