--- a/stylesheets/scss/_sidebar.scss
+++ b/stylesheets/scss/_sidebar.scss
@@ -15,6 +15,7 @@
     padding: 0;
     box-sizing: border-box;
     background: $white;
+    min-height: 63px;
   }
 }
 
